# iptuapi-python

./: .gitignore  README.md  pyproject.toml
iptuapi/: __init__.py  client.py  config.py  exceptions.py  models.py
tests/: __init__.py  test_client.py
